# CE-Lab24-Gr1

./: .gitignore  blinkingLED.py  config.yaml  eduroam-linux-Aarhus_University-Aarhus_University.py  map.pgm  readFromLightSensor.py  readFromSonarSensor.py  resources.md  run.txt
ROS2/: LEDTest.py  config.yaml  readFromSonarSensor.py
ROS2/dev_ws/install/: setup.sh
ROS2/dev_ws/src/install/: local_setup.sh
ROS2/dev_ws/src/wshop_nodes/: setup.py
ROS2/dev_ws/src/wshop_nodes/wshop_nodes/: composed_nodes.py
ROS2/turtlebot3_ws/install/: local_setup.sh  setup.sh
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/share/ld08_driver/cmake/: ld08_driverConfig.cmake
catkin_ws/devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
catkin_ws/devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
catkin_ws/devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-extras.cmake  turtlebot3_example-msg-paths.cmake  (+1 more)
catkin_ws/turtlebot3/turtlebot3_example/nodes/: turtlebot3_obstacle
dev_ws/install/: local_setup.sh
dev_ws/log/: latest_build
dev_ws/src/install/: setup.sh
dev_ws/src/install/tf2_workshop/share/tf2_workshop/: package.dsv  package.ps1  package.sh  package.xml
dev_ws/src/log/: latest_build
dev_ws/src/tf2_workshop/: setup.py
dev_ws/src/tf2_workshop/tf2_workshop/: broadcaster.py
dev_ws/src/wshop_nodes/: setup.cfg
opencr_update/: README.md  update.bat
turtlebot3_obstacle_detection/: main.py  turtlebot3_obstacle_detection.py
turtlebot3_ws/log/: latest_build
(+276 files in other folders)
