<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_workshop</name>
  <version>0.0.0</version>
  <description>ROS2 TF2 Tutorial</description>
  <maintainer email="202307381@post.au.dk">henrik</maintainer>
  <license>Apache License 2.0</license>

  <depend>tf2_ros</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
